--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
+  "name": "node-crawler",
   "dependencies": {
-    "express": "^4.16.2",
+    "body-parser": "^1.18.2",
+    "express": "~4.13.4",
     "iconv-lite": "^0.4.19",
     "moment": "^2.19.1",
-    "superagent": "^3.8.0"
+    "multer": "^1.3.0",
+    "superagent": "^3.8.0",
+    "superagent-proxy": "^1.0.2",
+    "unpipe": "^1.0.0"
   }
 }
