--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "crypto": "^1.0.1",
     "express": "~4.13.4",
     "iconv-lite": "^0.4.19",
     "moment": "^2.19.1",
